Notificaciones via email por proyecto